Bug 133569 - Writer comments ruler UI control problems
Summary: Writer comments ruler UI control problems
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Jan-Marek Glogowski
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords: needsUXEval
Depends on:
Blocks: Writer-Comments Rulers
  Show dependency treegraph
 
Reported: 2020-05-31 20:58 UTC by Jan-Marek Glogowski
Modified: 2020-06-03 15:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Dummy document with a comment for easier test (8.64 KB, application/vnd.oasis.opendocument.text)
2020-05-31 20:58 UTC, Jan-Marek Glogowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan-Marek Glogowski 2020-05-31 20:58:57 UTC
Created attachment 161480 [details]
Dummy document with a comment for easier test

Original I found that Writer's comments ruler UI control in some KDE theme setting was highlighting on mouse over to use a black text on black background, which made it unreadable.

While looking into the code and testing the UI element, I found further problems with the design and implementation:

* swapping the arrow from left to right, as documented in the design wiki page, moves the text, which I find highly irritating
* in RTL mode, the label is right-aligned, resulting in completely hidden text and arrow, if the document space is small
* the arrow has a small, fixed size and padding, drawn with four consecutive lines, so it doesn't scale in HiDPI mode

Eventually the comments column should switch to the left side of the document, if the document itself is in RTL mode, as IMHO this follows the reading flow easier. But since I don't have any experience working with RTL environments, I didn't implement this. 

There is already a patch, which addresses all the mentioned problems: https://gerrit.libreoffice.org/c/core/+/75421

Design wiki page: https://wiki.documentfoundation.org/Design/Whiteboards/Comments_Ruler_Control
Implementation tracking: bug 38246

If some design people have additional comments, I'll try to address them, otherwise merge the patch end of next week.

To reproduce:
1. Open the attached document
2. Change the comments visibility via the ruler UI element

You can test the HiDPI setting with qt5 / kf5 starting LO with QT_SCALE_FACTOR=2.
Comment 1 Jan-Marek Glogowski 2020-06-03 04:53:03 UTC
While testing the change, I noticed the tooltip was just visible for less then a second and then didn't show again, until the mouse was moved outside of the control.
Comment 2 Heiko Tietze 2020-06-03 07:57:44 UTC
Great improvement to UX, commented on Gerrit.
Comment 3 Commit Notification 2020-06-03 08:12:23 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0f499af8c2c22ccc8f1c19edeeb2bdac8cbcb7f0

tdf#133569 rework the SwCommentRuler button

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2020-06-03 15:11:49 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/172c290f86b961fb786b48d18a81004c7fa14867

tdf#133569 rework the SwCommentRuler button

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.