tdf#133569 rework the SwCommentRuler button

The original design was planned in tdf#38246 and documented as:
https://wiki.documentfoundation.org/Design/Whiteboards/Comments_Ruler_Control

This patch includes the following changes:
* use the correct highlight colors
* use a down-pointing arrow for expanse with a stable position,
  like some tree view implementations
* left-align the label in RTL for better us- / read-ability
* dynamic sized arrow for HiDPI:
  * draw arrow using a polygon
  * calculate arrow size and padding based on font size
  * drop almost all constant values
* fix the instable, mouse-over tooltip -> just show it always

While at it, I found clang-format just added some minimal,
additional changes, so I removed the file from the blacklist
and included these.

Change-Id: I6e0bade387639eae6bdaaf7960b2fe44c73adf65